Bugfixes: * changes to use more recent ipfsapi instead of ipfsApi * temp directory now in the repository * bugfix to adapt to ipfsapi interface change * if dogecoin uploads fail, the searchengine now will ignore that. Please delete your old searchdb.json file or click Reload DB on the frontend

--- a/.hgignore
+++ b/.hgignore
@@ -6,7 +6,6 @@ syntax: glob
 .DS_Store
 searchdb.json
 keyfile.json
-temp
 odrpyenv
 __pycache__
 .py27env
@@ -14,3 +13,4 @@ kubrikaddress.txt
 dogekubrik.json
 dogeconf.json
 dogecoinconf.json
+/libsodium.dylib
